Bug 1727399 - When style updates font information, make sure to invalidate style asynchronously. r=jfkthame

Some style system APIs (like StyleNewSubtree) don't deal with nested
restyles really well (it'd be weird if StyleNewSubtree would end up
styling not only that subtree but the whole document).

To prevent breaking style system invariants, make sure to invalidate the
style asynchronously using an early runner. This should ensure at most
one frame of wrong metrics, but usually zero.

Differential Revision: https://phabricator.services.mozilla.com/D126076